Revert "Add windows build"
This reverts commit 63172be4c1f74102093259599d32fb7cedc1a5ce.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,6 @@ concurrency:
 
 jobs:
   deploy:
-    strategy:
-      matrix:
-        platform: [html, windows]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -41,28 +38,24 @@ jobs:
           godot_executable_download_url: https://github.com/godotengine/godot/releases/download/4.5-stable/Godot_v4.5-stable_linux.x86_64.zip
           godot_export_templates_download_url: https://github.com/godotengine/godot/releases/download/4.5-stable/Godot_v4.5-stable_export_templates.tpz
           relative_project_path: ./
-          relative_export_path: ./build/${{ matrix.platform }}/
+          relative_export_path: ./build/
           cache: true
-          export_preset: ${{ matrix.platform }}
       - name: List files
         run: tree
       - name: Setup Pages
-        if: matrix.platform == 'html'
         uses: actions/configure-pages@v5
       - name: Upload artifact
-        if: matrix.platform == 'html'
         uses: actions/upload-pages-artifact@v3
         with:
           path: "build/html/"
       - name: Deploy to GitHub Pages
-        if: matrix.platform == 'html'
         id: deployment
         uses: actions/deploy-pages@v4
       - uses: KikimoraGames/itch-publish@v0.0.3
         with:
           butlerApiKey: ${{secrets.BUTLER_API_KEY}}
-          gameData: ./build/${{ matrix.platform }}
+          gameData: ./build/html
           itchUsername: ${{env.ITCH_USERNAME}}
           itchGameId: ${{ env.ITCH_GAME_ID }}
-          buildChannel: ${{ matrix.platform }}
-          buildNumber: ${{ github.sha }}
+          buildChannel: html
+          buildNumber: ${{ needs.version.outputs.version_hash }}
