Add windows build

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ threads/godot_pool_size=4
 
 [preset.1]
 
-name="Windows Desktop"
+name="windows"
 platform="Windows Desktop"
 runnable=true
 advanced_options=false
