--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,5 @@
 name: Deploy Godot project to GitHub Pages and Itch.io
 
-env:
-  ITCH_USERNAME: martindelille
-  ITCH_GAME_ID: burnout-simulateur
-
 on:
   push:
     branches: ["**"]
@@ -20,7 +16,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  deploy:
+  build:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -28,6 +24,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Godot
         run: |
           mkdir ~/.config/godot
@@ -41,21 +38,65 @@ jobs:
           relative_export_path: ./build/
           cache: true
       - name: List files
-        run: tree
+        run: tree build
+
+      - name: Upload HTML artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: html
+          path: build/html/
+
+      - name: Upload Windows artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows
+          path: build/windows/
+
+  github-pages:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Download HTML artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: html
+          path: build/html/
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "build/html/"
+          path: build/html/
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-      - uses: KikimoraGames/itch-publish@v0.0.3
+
+  itch-io:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        channel: [html, windows]
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          butlerApiKey: ${{secrets.BUTLER_API_KEY}}
-          gameData: ./build/html
-          itchUsername: ${{env.ITCH_USERNAME}}
-          itchGameId: ${{ env.ITCH_GAME_ID }}
-          buildChannel: html
-          buildNumber: ${{ needs.version.outputs.version_hash }}
+          name: ${{ matrix.channel }}
+          path: build/${{ matrix.channel }}
+
+      - name: List files
+        run: tree
+
+      - uses: yeslayla/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_API_KEY }}
+          CHANNEL: ${{ matrix.channel }}
+          ITCH_USER: martindelille
+          ITCH_GAME: burnout-simulateur
+          PACKAGE: build/${{ matrix.channel }}
